# pokemon-red-modern

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  PLAN.md  README.md  TASKS.md
data/dev/battle_animations/: core.sexpr
data/dev/battle_ui/: core.sexpr
docs/: ARCHITECTURE.md  AUDIO.md  BATTLE_ANIMATION_LAB.md  BOOT_FLOW.md  CODE_STYLE.md  CONTENT_FOLLOW_UPS.md  CONTENT_PIPELINE.md  CONTENT_SCHEMA.md  CONTROLS_AND_TIMING.md  DISTRIBUTION_BOUNDARY.md  EXECUTORS_AND_ISA.md  FULL_CAMPAIGN_IMPLEMENTATION.md  IMPORT_OUTPUT_AND_CACHE.md  MAP_BROWSER.md  PACKAGES_AND_PATCHES.md  PRESENTATION_ISA_AUDIT.md  PUBLIC_RELEASE_POLICY.md  RULE_IMPORT.md  SAVE_FORMAT.md  SCRIPT_LANGUAGE.md  TITLE_TO_BROCK_PLAYTEST.md  VISUAL_ASSET_DOMAINS.md  WORLD_RENDERER.md
roms/: README.md
scripts/: build.sh  import_battle_animations.py  import_battle_animations.sh  input.sh  run.sh  test.sh
src/: accuracy_rules.cpp  animations.cpp  animations.hpp  audio.cpp  audio.hpp  battle.cpp  battle.hpp  battle_animation_lab.cpp  battle_animation_lab.hpp  battle_controller.cpp  battle_controller.hpp  battle_rules.cpp  battle_rules.hpp  battle_ui.cpp  battle_ui.hpp  battle_view.cpp  battle_view.hpp  boot.cpp  boot.hpp  campaign_programs.cpp  campaign_programs.hpp  capture_rules.cpp  catalog.cpp  catalog.hpp  clocks.cpp  clocks.hpp  content_assets.hpp  content_battle.hpp  content_ids.hpp  content_index.hpp  content_programs.hpp  content_world.hpp  controls.cpp  controls.hpp  controls_menu.cpp  controls_menu.hpp  dev_input.cpp  dev_input.hpp  diagnostics.cpp  diagnostics.hpp  (+75 more)
src/content/: catalog.cpp  catalog.hpp
src/host/: tools.cpp  tools.hpp  window.cpp
src/presentation/: game_view.cpp  game_view.hpp
src/render/: boot.cpp  boot.hpp  dialogue.cpp  dialogue.hpp  field_menu.cpp  field_menu.hpp  frame.cpp  frame.hpp  maps.cpp  maps.hpp  naming.cpp  naming.hpp  pokedex.cpp  pokedex.hpp
src/runtime/: state.cpp
tests/: foundation_tests.cpp
tests/fixtures/battle_animations/: core.sexpr
tests/fixtures/battle_ui/: core.sexpr
